{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 166,
  "lineage": "acaa5d58-c0e4-ecb5-5b6a-422066fced31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03cb435543da72b71",
            "domain": "vpc",
            "id": "eipalloc-00c49997382dd1afe",
            "instance": "i-00d8eb035c475820c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0a019c3109d8a87eb",
            "private_dns": "ip-10-16-1-205.eu-west-1.compute.internal",
            "private_ip": "10.16.1.205",
            "public_dns": "ec2-54-78-203-42.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.203.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Deployer": "srinivas.a@mobileum.com",
              "Name": "eip_master"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.k8_master",
            "aws_security_group.k8s-SG",
            "aws_subnet.k8_pub1",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c733dd434459dd69",
            "domain": "vpc",
            "id": "eipalloc-08a9b8421795fd489",
            "instance": "i-009ef084033aa41fe",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-09336420e1e1d4ebf",
            "private_dns": "ip-10-16-1-72.eu-west-1.compute.internal",
            "private_ip": "10.16.1.72",
            "public_dns": "ec2-52-48-113-10.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.48.113.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Deployer": "srinivas.a@mobileum.com",
              "Name": "eip_worker1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.k8_worker1",
            "aws_security_group.k8s-SG",
            "aws_subnet.k8_pub1",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06e5bb88f95b5db76",
            "domain": "vpc",
            "id": "eipalloc-0131e3dc083898d74",
            "instance": "i-0bab34edd38dda8fa",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-09cc19701a4a1254c",
            "private_dns": "ip-10-16-1-151.eu-west-1.compute.internal",
            "private_ip": "10.16.1.151",
            "public_dns": "ec2-54-246-185-75.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.185.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Deployer": "srinivas.a@mobileum.com",
              "Name": "eip_worker2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.k8_worker2",
            "aws_security_group.k8s-SG",
            "aws_subnet.k8_pub1",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e786af422f8082a",
            "arn": "arn:aws:ec2:eu-west-1:262740529180:instance/i-00d8eb035c475820c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gitlab-ec2-instance-role",
            "id": "i-00d8eb035c475820c",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "utility",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a019c3109d8a87eb",
            "private_dns": "ip-10-16-1-205.eu-west-1.compute.internal",
            "private_ip": "10.16.1.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0399afdd5fc7efbd6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033d269f47cbc389f",
            "tags": {
              "Deployer": "srinivas.a@mobileum.com",
              "Name": "k8s-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02461004f6cba1445"
            ]
          },
          "dependencies": [
            "aws_security_group.k8s-SG",
            "aws_subnet.k8_pub1",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8_worker1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e786af422f8082a",
            "arn": "arn:aws:ec2:eu-west-1:262740529180:instance/i-009ef084033aa41fe",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gitlab-ec2-instance-role",
            "id": "i-009ef084033aa41fe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utility",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09336420e1e1d4ebf",
            "private_dns": "ip-10-16-1-72.eu-west-1.compute.internal",
            "private_ip": "10.16.1.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04bc56d2b0d880ba0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033d269f47cbc389f",
            "tags": {
              "Deployer": "srinivas.a@mobileum.com",
              "Name": "k8s-worker1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02461004f6cba1445"
            ]
          },
          "dependencies": [
            "aws_security_group.k8s-SG",
            "aws_subnet.k8_pub1",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8_worker2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e786af422f8082a",
            "arn": "arn:aws:ec2:eu-west-1:262740529180:instance/i-0bab34edd38dda8fa",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "gitlab-ec2-instance-role",
            "id": "i-0bab34edd38dda8fa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utility",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09cc19701a4a1254c",
            "private_dns": "ip-10-16-1-151.eu-west-1.compute.internal",
            "private_ip": "10.16.1.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b963339f5e353b5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033d269f47cbc389f",
            "tags": {
              "Deployer": "srinivas.a@mobileum.com",
              "Name": "k8s-worker2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02461004f6cba1445"
            ]
          },
          "dependencies": [
            "aws_security_group.k8s-SG",
            "aws_subnet.k8_pub1",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:262740529180:internet-gateway/igw-073f4ec74f8e0e992",
            "id": "igw-073f4ec74f8e0e992",
            "owner_id": "262740529180",
            "tags": {
              "Name": "k8s-igw"
            },
            "vpc_id": "vpc-0d9a6654ba99d5540"
          },
          "dependencies": [
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-073f4ec74f8e0e992",
            "id": "r-rtb-0b8880adcae453a621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b8880adcae453a62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.k8_igw",
            "aws_route_table.k8rt_public",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8rt_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:262740529180:route-table/rtb-0b8880adcae453a62",
            "id": "rtb-0b8880adcae453a62",
            "owner_id": "262740529180",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-pub-rt"
            },
            "vpc_id": "vpc-0d9a6654ba99d5540"
          },
          "dependencies": [
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asso_public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0589c4cc46e1fb8c4",
            "route_table_id": "rtb-0b8880adcae453a62",
            "subnet_id": "subnet-033d269f47cbc389f"
          },
          "dependencies": [
            "aws_route_table.k8rt_public",
            "aws_subnet.k8_pub1",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asso_public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb2ab16cce2b7c3",
            "route_table_id": "rtb-0b8880adcae453a62",
            "subnet_id": "subnet-0181d4a5f4e2d672a"
          },
          "dependencies": [
            "aws_route_table.k8rt_public",
            "aws_subnet.k8_pub2",
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s-SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:262740529180:security-group/sg-02461004f6cba1445",
            "description": "Allow k8s required inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02461004f6cba1445",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic ICMP - IPv4",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- 10250",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- 10252",
                "from_port": 10252,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10252
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- 30000-32767",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- 8001",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- My IP to ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4- custom port range",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4-6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All Traffic-IPv4-8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow of All UDP - IPv4-10251",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "Allow all traffic with in self SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "k8s-SG",
            "name_prefix": "",
            "owner_id": "262740529180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployer": "srinivas.a@mobileum.com",
              "Name": "k8s-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9a6654ba99d5540"
          },
          "dependencies": [
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8_pub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:262740529180:subnet/subnet-033d269f47cbc389f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.16.1.0/24",
            "id": "subnet-033d269f47cbc389f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262740529180",
            "tags": {
              "Name": "k8s-pub1"
            },
            "tags_all": {
              "Name": "k8s-pub1"
            },
            "vpc_id": "vpc-0d9a6654ba99d5540"
          },
          "dependencies": [
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8_pub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:262740529180:subnet/subnet-0181d4a5f4e2d672a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.16.2.0/24",
            "id": "subnet-0181d4a5f4e2d672a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262740529180",
            "tags": {
              "Name": "k8s-pub2"
            },
            "tags_all": {
              "Name": "k8s-pub2"
            },
            "vpc_id": "vpc-0d9a6654ba99d5540"
          },
          "dependencies": [
            "aws_vpc.k8_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:262740529180:vpc/vpc-0d9a6654ba99d5540",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/21",
            "default_network_acl_id": "acl-050371babb6f7d41d",
            "default_route_table_id": "rtb-00c73bfc5aad201c9",
            "default_security_group_id": "sg-0cfdff0a11d6d6e5f",
            "dhcp_options_id": "dopt-fa69759c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d9a6654ba99d5540",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00c73bfc5aad201c9",
            "owner_id": "262740529180",
            "tags": {
              "Name": "k8s-vpc"
            },
            "tags_all": {
              "Name": "k8s-vpc"
            }
          }
        }
      ]
    }
  ]
}